[package]
name = "CEX-Order-Book"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
ordered-float = "5.0.0"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"]}
websocket = "0.27.1"
